# project-tasks

./: .gitignore  README.md  pyproject.toml
src/project_tasks/: __main__.py  cli.py  executor.py  output.py  pyproject.py  service.py
tests/: test_cli_except_hook.py  test_cli_parser.py  test_cli_run.py  test_executor.py  test_output.py  test_pyproject.py  test_service.py
